--- a/AWSAuthSDK/Sources/AWSAuthUI/SignIn.storyboard
+++ b/AWSAuthSDK/Sources/AWSAuthUI/SignIn.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina6_1" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,11 +17,11 @@
                         <viewControllerLayoutGuide type="bottom" id="oro-gg-Uv8"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="n6k-Ut-fuw">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IkO-GD-xvp">
-                                <rect key="frame" x="47.5" y="475" width="280" height="35"/>
+                                <rect key="frame" x="67" y="508.5" width="280" height="35"/>
                                 <color key="backgroundColor" red="0.2707115296" green="0.59983539500000005" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="280" id="UmK-eX-imF"/>
@@ -39,48 +39,48 @@
                                 </userDefinedRuntimeAttributes>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cMG-il-Rxs">
-                                <rect key="frame" x="47.5" y="510" width="114" height="27"/>
+                                <rect key="frame" x="67" y="543.5" width="114" height="27"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Create new account">
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bl8-r9-Ysa">
-                                <rect key="frame" x="197.5" y="510" width="130" height="27"/>
+                                <rect key="frame" x="217" y="543.5" width="130" height="27"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                 <state key="normal" title="Forgot your password?">
                                     <color key="titleShadowColor" red="0.5" green="0.5" blue="0.5" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                             </button>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="DRt-0S-n1y" userLabel="Left Horizontal Bar">
-                                <rect key="frame" x="16" y="419.5" width="112" height="1"/>
+                                <rect key="frame" x="20" y="419.5" width="127.5" height="1"/>
                                 <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="2qA-yh-cev"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cbu-Mw-6RD" userLabel="Right Horizontal Bar">
-                                <rect key="frame" x="247" y="419.5" width="112" height="1"/>
+                                <rect key="frame" x="266.5" y="419.5" width="127.5" height="1"/>
                                 <color key="backgroundColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="1" id="3N7-7L-emb"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" text="or sign in with" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oXD-JT-iR2">
-                                <rect key="frame" x="136" y="411" width="103" height="18"/>
+                                <rect key="frame" x="155.5" y="411" width="103" height="18"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <color key="textColor" red="0.66666666669999997" green="0.66666666669999997" blue="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S1T-RK-06i">
-                                <rect key="frame" x="16" y="20" width="343" height="0.0"/>
+                                <rect key="frame" x="20" y="44" width="374" height="0.0"/>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jGi-ey-N0m">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="317"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jGi-ey-N0m" userLabel="LogoContainer">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="425.5"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="C4Q-l4-qCO">
-                                        <rect key="frame" x="0.0" y="111" width="375" height="95"/>
+                                        <rect key="frame" x="0.0" y="149" width="414" height="127.5"/>
                                     </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -92,7 +92,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8lZ-tI-ceJ">
-                                <rect key="frame" x="47.5" y="317" width="280" height="150"/>
+                                <rect key="frame" x="67" y="350.5" width="280" height="150"/>
                                 <subviews>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" bounces="NO" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="75" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="R0w-bP-9eV">
                                         <rect key="frame" x="4" y="4" width="271" height="142"/>
@@ -107,7 +107,7 @@
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xVu-TI-i2u">
-                                                            <rect key="frame" x="0.0" y="0.0" width="271" height="37"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="271" height="49"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B1j-jz-tSY">
                                                                     <rect key="frame" x="8" y="14" width="255" height="17"/>
@@ -123,7 +123,7 @@
                                                                 <constraint firstItem="B1j-jz-tSY" firstAttribute="leading" secondItem="xVu-TI-i2u" secondAttribute="leadingMargin" id="SMx-HS-9t1"/>
                                                             </constraints>
                                                         </view>
-                                                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="unJ-u8-DYw">
+                                                        <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="unJ-u8-DYw">
                                                             <rect key="frame" x="0.0" y="60" width="271" height="13"/>
                                                             <subviews>
                                                                 <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" textAlignment="natural" minimumFontSize="14" translatesAutoresizingMaskIntoConstraints="NO" id="r7a-4e-Qv0">
@@ -145,10 +145,10 @@
                                                             </constraints>
                                                         </view>
                                                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="P0j-LZ-SLU">
-                                                            <rect key="frame" x="0.0" y="0.0" width="271" height="74.5"/>
+                                                            <rect key="frame" x="0.0" y="0.0" width="271" height="86.5"/>
                                                             <subviews>
                                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="db7-Ph-RET">
-                                                                    <rect key="frame" x="13" y="28" width="250" height="38.5"/>
+                                                                    <rect key="frame" x="13" y="52" width="250" height="26.5"/>
                                                                     <fontDescription key="fontDescription" type="system" pointSize="22"/>
                                                                     <color key="textColor" red="0.38810096150000001" green="0.38810096150000001" blue="0.38810096150000001" alpha="1" colorSpace="calibratedRGB"/>
                                                                     <nil key="highlightedColor"/>
@@ -198,7 +198,7 @@
                                 </constraints>
                             </view>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jyk-z8-NkG">
-                                <rect key="frame" x="47.5" y="485" width="280" height="40"/>
+                                <rect key="frame" x="67" y="485" width="280" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="240" id="6Kt-TZ-ALm"/>
                                     <constraint firstAttribute="height" constant="40" id="lKw-a6-kGk"/>
@@ -216,7 +216,7 @@
                                 </variation>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xK4-QM-voz">
-                                <rect key="frame" x="47.5" y="437" width="280" height="40"/>
+                                <rect key="frame" x="67" y="437" width="280" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="0lC-Yd-Hj0"/>
                                     <constraint firstAttribute="width" constant="280" id="U76-ZU-UHt"/>
@@ -234,7 +234,7 @@
                                 </variation>
                             </button>
                             <button opaque="NO" tag="2" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Utd-qw-giI">
-                                <rect key="frame" x="47.5" y="533" width="280" height="40"/>
+                                <rect key="frame" x="67" y="533" width="280" height="40"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="40" id="71S-dD-q9S"/>
                                     <constraint firstAttribute="width" constant="280" id="ExG-9m-gcO"/>
@@ -256,6 +256,7 @@
                         <constraints>
                             <constraint firstItem="oXD-JT-iR2" firstAttribute="centerX" secondItem="n6k-Ut-fuw" secondAttribute="centerX" id="4v3-Qw-RCT"/>
                             <constraint firstItem="jyk-z8-NkG" firstAttribute="top" secondItem="xK4-QM-voz" secondAttribute="bottom" constant="8" symbolic="YES" id="5lV-hc-EcC"/>
+                            <constraint firstItem="8lZ-tI-ceJ" firstAttribute="centerY" secondItem="jGi-ey-N0m" secondAttribute="bottom" id="7A8-ze-GgO"/>
                             <constraint firstItem="cMG-il-Rxs" firstAttribute="leading" secondItem="IkO-GD-xvp" secondAttribute="leading" id="8PT-8G-zDR"/>
                             <constraint firstItem="jGi-ey-N0m" firstAttribute="width" secondItem="n6k-Ut-fuw" secondAttribute="width" id="9Zg-ui-Sdc"/>
                             <constraint firstItem="DRt-0S-n1y" firstAttribute="width" secondItem="Cbu-Mw-6RD" secondAttribute="width" id="ArO-DB-h8C"/>
@@ -273,7 +274,6 @@
                             <constraint firstItem="Cbu-Mw-6RD" firstAttribute="top" secondItem="DRt-0S-n1y" secondAttribute="top" id="Z6Q-o6-9eB"/>
                             <constraint firstItem="8lZ-tI-ceJ" firstAttribute="centerX" secondItem="n6k-Ut-fuw" secondAttribute="centerX" id="Z6c-Ne-U4F"/>
                             <constraint firstItem="jGi-ey-N0m" firstAttribute="top" secondItem="n6k-Ut-fuw" secondAttribute="top" id="aKb-Ev-3b4"/>
-                            <constraint firstItem="8lZ-tI-ceJ" firstAttribute="top" secondItem="jGi-ey-N0m" secondAttribute="bottom" id="aYZ-Ct-qD3"/>
                             <constraint firstItem="xK4-QM-voz" firstAttribute="centerX" secondItem="oXD-JT-iR2" secondAttribute="centerX" id="blc-h6-gp9"/>
                             <constraint firstItem="xK4-QM-voz" firstAttribute="leading" secondItem="jyk-z8-NkG" secondAttribute="leading" id="dr3-TW-SP5"/>
                             <constraint firstItem="oXD-JT-iR2" firstAttribute="leading" secondItem="DRt-0S-n1y" secondAttribute="trailing" constant="8" symbolic="YES" id="enS-bR-n6c"/>
